unpackaged/main/default/objects/LF__Page__c/LF__Page__c.object-meta.xml
<CustomObject>
    <description>Lead Forensics visit page data</description>
    <label>Page</label>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>