unpackaged/main/default/objects/LF__Page__c/fields/LF__DateTime__c.field-meta.xml
<CustomField>
    <fullName>LF__DateTime__c</fullName>
    <label>Date/Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>