unpackaged/main/default/objects/LF__Page__c/fields/LF__Duration__c.field-meta.xml
<CustomField>
    <fullName>LF__Duration__c</fullName>
    <label>Duration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>