unpackaged/main/default/objects/LF__Page__c/fields/LF__PageURL__c.field-meta.xml
<CustomField>
    <fullName>LF__PageURL__c</fullName>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>